--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
